--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Andraid</string>
+    <string name="action_settings">Settings</string>
+
+    <string-array name="spinner_array">
+        <item>Pilih Negara</item>
+        <item>Indonesia </item>
+        <item>Malaysia</item>
+        <item>Jepang</item>
+        <item>Amerika</item>
+        <item>Singapura</item>
+
+    </string-array>
 </resources>
+
